Fix: Added invisible header for bottom navigation , and normal headers for asides

--- a/phase-3/css/style.css
+++ b/phase-3/css/style.css
@@ -216,4 +216,8 @@ h2 {
         padding: 5px;
     }
 
+    .bottom-nav-header {
+        display: none;
+    }
+
 }
